@@ -83,6 +83,7 @@ from ..core.topologyattrs import (
     Resnums,
     Segids,
     Tempfactors,
+    FormalCharges,
 )
 
 
@@ -155,7 +156,7 @@ def hy36decode(width, s):
 class PDBParser(TopologyReaderBase):
     """Parser that obtains a list of atoms from a standard PDB file.
 
-    Creates the following Attributes:
+    Creates the following Attributes (if present):
      - names
      - chainids
      - tempfactors
@@ -166,6 +167,7 @@ class PDBParser(TopologyReaderBase):
      - segids
      - elements
      - bonds
+     - formalcharges
 
     Guesses the following Attributes:
      - masses
@@ -186,6 +188,10 @@ class PDBParser(TopologyReaderBase):
        are now assigned (Issue #2422).
        Aliased ``bfactors`` topologyattribute to ``tempfactors``.
        ``bfactors`` is deprecated and will be removed in 3.0 (Issue #1901)
+    .. versionchanged:: 2.3.0
+       Formal charges are now read from PDB files if present. No formalcharge
+       attribute is created if no formal charges are present in the PDB file.
+       Any formal charges not set are assumed to have a value of 0.
     """
     format = ['PDB', 'ENT']
 
@@ -222,12 +228,11 @@ class PDBParser(TopologyReaderBase):
         icodes = []
         tempfactors = []
         occupancies = []
-
         resids = []
         resnames = []
-
         segids = []
         elements = []
+        formalcharges = []
 
         self._wrapped_serials = False  # did serials go over 100k?
         last_wrapped_serial = 100000  # if serials wrap, start from here
@@ -260,6 +265,7 @@ class PDBParser(TopologyReaderBase):
                 resnames.append(line[17:21].strip())
                 chainids.append(line[21:22].strip())
                 elements.append(line[76:78].strip())
+                formalcharges.append(line[78:80].strip())
 
                 # Resids are optional
                 try:
@@ -334,6 +340,30 @@ class PDBParser(TopologyReaderBase):
                     warnings.warn(wmsg)
                     validated_elements.append('')
             attrs.append(Elements(np.array(validated_elements, dtype=object)))
+
+        if any(formalcharges):
+            for i, entry in enumerate(formalcharges):
+                if not entry == '':
+                    if entry == '0':
+                        # Technically a lack of charge shouldn't be in the PDB
+                        # but MDA has a few files that specifically have 0
+                        # entries, indicating that some folks interpret 0 as
+                        # an allowed entry
+                        formalcharges[i] = 0
+                    elif ('+' in entry) or ('-' in entry):
+                        try:
+                            formalcharges[i] = int(entry[::-1])
+                        except ValueError:
+                            errmsg = (f"Unknown formal charge {entry} "
+                                      "encountered")
+                            raise ValueError(errmsg)
+                    else:
+                        errmsg = (f"Formal charge {entry} is unrecognized")
+                        raise ValueError(errmsg)
+                else:
+                    formalcharges[i] = 0
+            attrs.append(
+                    FormalCharges(np.array(formalcharges, dtype=int)))
 
         masses = guess_masses(atomtypes)
         attrs.append(Masses(masses, guessed=True))
