@@ -1,0 +1,39 @@
+REMARK For testing reading of formal charges
+REMARK This model represents an ideal PDB with valid elements and formal charges
+ATOM    577  N   ASP H  49      16.704  14.108  12.210  1.00 21.33           N
+ATOM    578  CA  ASP H  49      16.584  13.977  10.747  1.00 24.21           C
+ATOM    579  C   ASP H  49      17.636  13.051  10.097  1.00 24.56           C
+ATOM    580  O   ASP H  49      17.363  12.527   9.019  1.00 24.83           O
+ATOM    581  CB  ASP H  49      16.488  15.330   9.988  1.00 28.91           C
+ATOM    582  CG  ASP H  49      17.600  16.382  10.180  1.00 32.38           C
+ATOM    583  OD1 ASP H  49      18.584  16.125  10.909  1.00 33.55           O
+ATOM    584  OD2 ASP H  49      17.442  17.461   9.571  1.00 42.36           O1-
+ATOM    585  H   ASP H  49      16.933  15.029  12.562  1.00 21.33           H
+ATOM    586  HA  ASP H  49      15.631  13.477  10.577  1.00 24.21           H
+ATOM    587  HB3 ASP H  49      15.557  15.811  10.288  1.00 28.91           H
+ATOM    588  HB2 ASP H  49      16.375  15.140   8.919  1.00 28.91           H
+ATOM    589  N   ARG H  50      18.794  12.852  10.751  1.00 21.10           N
+ATOM    590  CA  ARG H  50      19.908  12.062  10.225  1.00 23.13           C
+ATOM    591  C   ARG H  50      20.342  10.898  11.121  1.00 20.79           C
+ATOM    592  O   ARG H  50      21.159  10.112  10.651  1.00 20.85           O
+ATOM    593  CB  ARG H  50      21.113  12.980   9.947  1.00 31.78           C
+ATOM    594  CG  ARG H  50      20.844  13.983   8.813  1.00 43.76           C
+ATOM    595  CD  ARG H  50      22.110  14.635   8.244  1.00 55.64           C
+ATOM    596  NE  ARG H  50      22.911  13.672   7.465  1.00 64.62           N
+ATOM    597  CZ  ARG H  50      23.874  13.946   6.570  1.00 68.53           C
+ATOM    598  NH1 ARG H  50      24.232  15.199   6.258  1.00 81.88           N
+ATOM    599  NH2 ARG H  50      24.498  12.931   5.973  1.00 78.51           N1+
+ATOM    600  H   ARG H  50      18.947  13.322  11.633  1.00 21.10           H
+ATOM    601  HA  ARG H  50      19.624  11.591   9.283  1.00 23.13           H
+ATOM    602  HB3 ARG H  50      21.973  12.367   9.676  1.00 31.78           H
+ATOM    603  HB2 ARG H  50      21.401  13.512  10.855  1.00 31.78           H
+ATOM    604  HG3 ARG H  50      20.104  14.736   9.076  1.00 43.76           H
+ATOM    605  HG2 ARG H  50      20.391  13.405   8.008  1.00 43.76           H
+ATOM    606  HD3 ARG H  50      22.756  14.920   9.075  1.00 55.64           H
+ATOM    607  HD2 ARG H  50      21.871  15.552   7.704  1.00 55.64           H
+ATOM    608  HE  ARG H  50      22.696  12.699   7.632  1.00 64.62           H
+ATOM    609 HH12 ARG H  50      24.953  15.372   5.572  1.00 81.88           H
+ATOM    610 HH11 ARG H  50      23.769  15.979   6.701  1.00 81.88           H
+ATOM    611 HH22 ARG H  50      25.238  13.086   5.302  1.00 78.51           H
+ATOM    612 HH21 ARG H  50      24.240  11.975   6.186  1.00 78.51           H
+END
