@@ -23,10 +23,10 @@ HETATM   20 Mg    Mg A   4      03.000  03.000  03.000  1.00 00.00          Mg
 HETATM   21 Ca    Ca A   5      00.000  00.000  03.000  1.00 00.00          CA
 TER      22
 HETATM 1609  S   DMS A 101      19.762  39.489  18.350  1.00 25.99           S
-HETATM 1610  O   DMS A 101      19.279  37.904  18.777  1.00 23.69           Ox
+HETATM 1610  O   DMS A 101      19.279  37.904  18.777  1.00 23.69           O
 HETATM 1611  C1  DMS A 101      21.344  39.260  17.532  1.00 24.07           C
 HETATM 1612  C2  DMS A 101      18.750  40.066  17.029  1.00 20.50           C
-HETATM 1613  S   DMS A 102      22.157  39.211  12.217  1.00 27.26           S1
+HETATM 1613  S   DMS A 102      22.157  39.211  12.217  1.00 27.26           S
 HETATM 1614  O   DMS A 102      20.622  38.811  11.702  1.00 25.51           O
 HETATM 1615  C1  DMS A 102      22.715  40.764  11.522  1.00 26.00           C
 HETATM 1616  C2  DMS A 102      22.343  39.515  13.971  1.00 25.46           C
